--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "uuid": "^9.0.0",
     "vue": "^3.0.4",
     "vue-router": "^4.2.2",
     "vuex": "^4.0.2",
