--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "uuid": "^9.0.0",
@@ -14,6 +16,8 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
+    "gh-pages": "^5.0.0",
     "vite": "^1.0.0-rc.13"
   }
 }
+git
