--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
     "gh-pages": "^5.0.0",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^1.0.0-rc.13",
+    "vite-plugin-gh-pages": "^0.4.1"
   }
 }
-git
