--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "build": "vite build"
   },
   "dependencies": {
     "uuid": "^9.0.0",
@@ -16,8 +14,6 @@
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
-    "gh-pages": "^5.0.0",
-    "vite": "^1.0.0-rc.13",
-    "vite-plugin-gh-pages": "^0.4.1"
+    "vite": "^1.0.0-rc.13"
   }
 }
